package org.example;

public enum Channel {
    WEB,
    MOBILE,
    EMAIL
}
